[gd_scene load_steps=7 format=3 uid="uid://grtj5g66505o"]

[ext_resource type="Script" path="res://player_lose.gd" id="1_nk5r4"]
[ext_resource type="Texture2D" uid="uid://bj3ifjnmvd8d7" path="res://Assets/You Lose.png" id="3_81vo4"]
[ext_resource type="Texture2D" uid="uid://bdxvdsypshqsx" path="res://Assets/Next Player Button.png" id="4_rkxof"]
[ext_resource type="FontFile" uid="uid://dvrn08fvin7tu" path="res://Assets/RobotoCondensed-BlackItalic.ttf" id="4_spaex"]
[ext_resource type="Texture2D" uid="uid://p1ee85wmibgx" path="res://Assets/Result Button.png" id="5_vx1x5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p8cik"]

[node name="PlayerLose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nk5r4")
tween_intensity = 1.1
tween_duration = 0.3

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.423529)

[node name="YouLose" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_top = 150.0
offset_right = 192.0
offset_bottom = 221.0
grow_horizontal = 2
texture = ExtResource("3_81vo4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.5
offset_top = -40.0
offset_right = 189.5
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="CurrentScore" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_spaex")
theme_override_font_sizes/font_size = 40
text = "SCORE: 0"
horizontal_alignment = 1

[node name="NextplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0.450648, 0.450648, 0.450648, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_p8cik")
icon = ExtResource("4_rkxof")
flat = true

[node name="ResultButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0.450648, 0.450648, 0.450648, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_p8cik")
icon = ExtResource("5_vx1x5")
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
offset_left = 450.5
offset_top = 620.0
offset_right = 829.5
offset_bottom = 691.0
theme_override_constants/separation = 5

[node name="Reason_English" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_spaex")
theme_override_font_sizes/font_size = 28
text = "
"
horizontal_alignment = 1

[node name="Reason_Indo" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_spaex")
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/NextplayerButton" to="." method="_on_nextplayer_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResultButton" to="." method="_on_result_button_pressed"]
